# proyecto-lenguajes-final-

./: documentacion_proyecto.py
api/: main.py
core/: CMakeLists.txt
core/examples/programs/: test_input.txt
core/examples/programs/cow/: programa1_incrementar.txt  programa2_loop.txt  programa3_hola.txt
core/examples/programs/cpp/: programa1.txt
core/examples/programs/java/: prog1_variables.txt  prog2_metodos.txt  prog3_control.txt  prog4_clase.txt
core/examples/programs/lua/: prog1_basico.txt  prog2_funciones.txt  prog3_tablas.txt  prog4_oop.txt
core/examples/programs/messi/: programa1_suma5.txt  programa2_loop.txt  programa3_imprimir_char.txt
core/examples/programs/okcomputer/: programa1_incrementar.txt  programa2_loop_countdown.txt  programa3_karma_io.txt
core/examples/programs/python/: prog1_variables.txt  prog2_funciones.txt  prog3_control.txt  (+1 more)
core/examples/specs/: ejemplo.yalex  ejemplo.yapar
core/include/natural/: qeqchi_translator.hpp
core/include/yalex/: dfa.cpp  dfa.hpp  nfa.cpp  nfa.hpp  regex_egine.cpp  regex_engine.hpp  tokenizer.cpp  tokenizer.hpp  yalex_reader.cpp  yalex_reader.hpp
core/include/yapar/: conflict_resolver.hpp  grammar.hpp  lalr_table.hpp  ll1_table.hpp  lr0_automaton.hpp  parser.hpp  slr1_table.hpp
core/src/: main_natural.cpp  main_yalex.cpp  main_yapar.cpp
core/src/natural/: qeqchi_translator.cpp
core/src/yalex/: dfa.cpp  nfa.cpp  regex_engine.cpp  tokenizer.cpp  yalex_reader.cpp
core/src/yapar/: conflict_resolver.cpp  grammar.cpp  lalr_table.cpp  ll1_table.cpp  lr0_automaton.cpp  parser.cpp  slr1_table.cpp
(+54 files in other folders)
